# release-tool

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.alternative.md  README.md  config-stub.backend.yml  config-stub.frontend.yml  config-stub.full.yml  config-stub.yml  git.py  pyproject.toml  release.py  requirements.txt  setup.cfg
.github/workflows/: docker-image.yml
docker/: Dockerfile
examples/: link-tasks-to-jira-release.github-action.yml  release  release_tool.ci.yml  release_tool.yml
release/: __main__.py  release.py
release/plugins/: common.py  conf.py  env.py  git.py  github.py  jira.py
