[tool.poetry]
name = "release-tool"
version = "0.2.0"
description = "A tool that automate managing releases, integrates with Jira and GitHub"
authors = ["Valentin Kuznetsov <aimestereo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyGithub = "^1.43"
jira = "^2.0"
PyYAML = "^5.1"
semver = "^2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
